feat added readme and how to run